--- a/everest/index.html
+++ b/everest/index.html
@@ -45,6 +45,10 @@
         <a href="#"><i class="uil uil-cog"></i></a>
         <a href="#"><i class="uil uil-cloud-sun"></i></a>
       </div>
+      <div class="footer">
+        <a href="#"><i class="uil uil-cog"></i></a>
+        <a href="#"><i class="uil uil-cloud-sun"></i></a>
+      </div>
     </div>
   </body>
 </html>
