--- a/everest/index.html
+++ b/everest/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <div class="container">
+      <video muted autoplay loop src="./images/동영상.mp4"></video>
       <!-- 헤드 시작 -->
       <div class="header">
         <div class="logo">
